chore: add missing volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,10 @@ services:
 volumes:
   portainer_data:
     external: true
+  prometheus_data:
+    external: true
+  grafana_data:
+    external: true
 
 networks:
   monitoring:
