--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,11 +62,8 @@ services:
       - "--web.console.templates=/usr/share/prometheus/consoles"
     networks:
       monitoring:
-    labels:
-      - "traefik.http.routers.my-prometheus.rule=Host(`prometheus.aa.home`)"
-      - "traefik.http.routers.my-prometheus.entrypoints=web"
-      - "traefik.http.routers.my-router.service=my-prometheus"
-      - "traefik.http.services.my-prometheus.loadBalancer.server.port=9090"
+    ports:
+      - 9090:9090
 
   grafana:
     image: grafana/grafana:latest
@@ -84,11 +81,8 @@ services:
       GF_INSTALL_PLUGINS: flant-statusmap-panel,ae3e-plotly-panel
     networks:
       monitoring:
-    labels:
-      - "traefik.http.routers.my-grafana.rule=Host(`grafana.aa.home`)"
-      - "traefik.http.routers.my-grafana.entrypoints=web"
-      - "traefik.http.routers.my-router.service=my-grafana"
-      - "traefik.http.services.my-grafana.loadBalancer.server.port=3000"
+    ports:
+      - 3000:3000
 
 volumes:
   portainer_data:
